<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:layout_gravity="top"
        android:layout_weight="5"
        android:gravity="center"
        android:text="@string/result_text"
        android:textColor="@color/colorYellow"
        android:textIsSelectable="true"
        android:textSize="50sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:layout_weight="1">

        <Button
            android:id="@+id/clear"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/clear"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="2sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="2"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/delete"
            android:textColor="@color/colorYellow"
            android:textSize="22sp" />

        <Button
            android:id="@+id/divide"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/divide"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:layout_weight="1">

        <Button
            android:id="@+id/seven"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/seven"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/eight"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/nine"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/multiply"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:layout_weight="1">

        <Button
            android:id="@+id/four"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/four"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/five"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/six"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/subtract"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:layout_weight="1">

        <Button
            android:id="@+id/one"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/one"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/two"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/three"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/add"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/add"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="15sp"
        android:layout_weight="1">

        <Button
            android:id="@+id/zero"
            android:layout_width="2sp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/zero"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/dot"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/comma"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />

        <Button
            android:id="@+id/equal"
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:backgroundTint="@color/colorButtons"
            android:text="@string/equal"
            android:textColor="@color/colorYellow"
            android:textSize="40sp" />
    </TableRow>

</LinearLayout>